--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,6 @@
-h2.intro{
-    text-align: center;
-    color: blanchedalmond;
-
-}
-
-body{
-    background-color: brown;
-    text-align: center;
-}
-
-img.intro{
-    size: 2.5rem;
-    
-}
-
-p{
-    font-family: 'Times New Roman', Times, serif;
-    color: hotpink;
+.intro{
+text-align: center;
+color: beige;
+background-color: blueviolet;
+font-family: Arial, Helvetica, sans-serif;
 }
